Update 06-event-booking-api project
